--- a/Amit.html
+++ b/Amit.html
@@ -1,41 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 </head>
-<body>
-    <h1>Application Form</h1>
-    <form style="border: 1px solid black;">
-        <label for="fname">first name:</label>
-        <input type="text" id="fname" name="fname">
-        <label for="text">Last name:</label>
-        <input type="text" id="lname" name="lname"><br><br>
-        <label for="DOB">Date of Birth:</label>
-        <input type="text" name="DOB" id="DOB">
-        <label for="age">Age:</label>
-        <input type="text" name="age" id="age"><br><br>
-        <label for="gender">Gender</label>
-        <input type="text" name="gender" id="gender">
-        <label for="email">E-mail Address:</label>
-        <input type="email" name="email" id="email"><br><br>
-        <label for="PA">possion Available:</label>
-        <label for="JD">Junior Developer</label>
-        <label for="M-LD">Mid=level Developer</label>
-        <label for="SD">Seniour Developer</label><br><br>
-        <label for="Pl">programming Languaga:</label>
-        <label for="java">Java</label>
-        <label for="JS">JavaScript</label>
-        <label for="pyt">python</label><br><br>
-        <label for="pwd">password:</label>
-        <input type="pwd" name="pwd" id="pwd">
-        <label for="Cpwd">confirm Password</label>
-        <input type="Cpwd"><br><br>
-        <input type="submit">
-        <input type="reset">
+<style>
+	.box{
+		width: 100px;
+		height: 100px;
+		border: 3px solid black;
+		/*background-image: linear-gradient(to top, red,green,blue);*/
+		/*background-image: linear-gradient(to left, red,green,blue);*/
+		/*background-image: linear-gradient(to bottom, red,green,blue);*/
+		/*background-image: linear-gradient(to right, red,green,blue);*/
+		/*background-image: repeating-radial-gradient(red, yellow 10%, green 15%);*/
+		/*background-image: conic-gradient(red ,green,yellow);
+		border-radius: 50%;
+		transition: width 2s, height 2s;*/
+}
+/*.box:hover{
+	width: 200px;
+	height: 200px;
+}*/
+div{
+	border: 1px solid black;
+	background-color: red;
+	width: 100px;
+	height: 100px;
+	transition: width 2s;
+}
+#div1{
+	transition-timing-function: ease;
+}
+#div2{
+	transition-timing-function: ease-in;
+}
+#div3{
+	transition-timing-function: ease-out;
+}
+#div4{
+	transition-timing-function: ease-in-out;
+}
 
-    </form>
-    
+
+div:hover{
+	width: 300px;
+}
+</style>
+<body>
+<!--<div class="box" id="box1"></div>-->
+	
+<div id="div1"></div><br>
+<div id="div2"></div><br>
+<div id="div3"></div><br>
+<div id="div4"></div><br>
+<div id="div5"></div><br>
 </body>
 </html>
