--- a/index.html
+++ b/index.html
@@ -1,34 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box shadow</title>
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<style type="text/css">
-    .main {
-        width: 500px;
-        height: 500px;
-        border: 2px solid black;
-        font-size: 100px;
-        color: white;
-        text-align: center;
-        margin: auto;
-        background-color: rgba(155, 255, 210);
-
-        /*
-    box shadow: 
-    x-axis  |  y-axis  |  blur  |  color;
-    */
-    }
-</style>
-
 <body>
-    <div class="main">
-        Hello everyone
-    </div>
-
+    <div class="container text-center my-3 p-5">
+        <div class="row align-items-start">
+          <div class="col">
+            <h1>Popular Courses</h1>
+            <h5>Featured Learning Paths</h5>
+          </div>
+        </div>
+      </div>
+      <div class="card-group">
+        <div class="card mx-4 bg-warning text-center rounded-2 shadow-lg">
+          <img src="https://as1.ftcdn.net/v2/jpg/01/69/39/54/1000_F_169395411_Lo4n3IWI4DV63VdR7jdk2wd8lthm2HCE.jpg" class="card-img-top rounded-2 " height="215px" alt="...">
+          <h3 class="my-3">Front-End Engineer</h3>
+          <h6>Beginner friendly, 121 Lessons</h6>
+          <button style="width: 30%; height: 40px; border: 1px solid yellow; background-color: yellow; border-radius: 20px; margin-left: 35%; margin-bottom: 20%; margin-top: 10%;">Details</button>
+        </div>
+        <div class="card mx-4 text-center rounded-2 shadow-lg">
+          <img src="https://static.vecteezy.com/system/resources/thumbnails/021/927/239/original/a-boy-and-girl-doing-homework-at-home-school-friends-two-positive-friends-who-get-along-well-are-doing-homework-at-home-and-working-on-the-project-students-using-laptop-video.jpg" class="card-img-top rounded-2" alt="...">
+          <h3 class="my-3">Full-Stack Engineer</h3>
+          <h6>Beginner friendly, 145 Lessons</h6>
+          <button style="width: 30%; height: 40px; border: 1px solid yellow; background-color: yellow; border-radius: 20px; margin-left: 35%; margin-bottom: 20%; margin-top: 10%;">Details</button>
+        </div>
+        <div class="card mx-4 text-center rounded-2 shadow-lg">
+          <img src="https://as2.ftcdn.net/v2/jpg/06/26/22/05/1000_F_626220505_8zkhHVzBKwPUmqy6K1o0JCereujwKbqm.jpg" class="card-img-top rounded-2" alt="...">
+          <h3 class="my-3">Back-End Engineer</h3>
+          <h6>Beginner friendly, 100 Lessons</h6>
+          <button style="width: 30%; height: 40px; border: 1px solid yellow; background-color: yellow; border-radius: 20px; margin-left: 35%; margin-bottom: 20%; margin-top: 10%;">Details</button>
+        </div>
+      </div>    <br><br>
+      <div class="card-group">
+        <div class="card text-center mx-4  rounded-2 shadow-lg">
+          <img src="https://as2.ftcdn.net/v2/jpg/01/24/66/09/1000_F_124660971_V5SfneWl72NiQdxcldbZDaZNHdSxLndh.jpg" class="card-img-top rounded-2" alt="...">
+          <h3 class="my-3">Computer Science</h3>
+          <h6>Beginner friendly, 83 Lessons</h6>
+          <button style="width: 30%; height: 40px; border: 1px solid yellow; background-color: yellow; border-radius: 20px; margin-left: 35%; margin-bottom: 20%; margin-top: 10%;">Details</button>
+        </div>
+        <div class="card  text-center mx-4 rounded-2 shadow-lg">
+          <img src="https://media.istockphoto.com/id/1254050848/photo/smart-schoolboy-uses-laptop-to-program-software-for-robotics-engineering-class-elementary.jpg?s=612x612&w=0&k=20&c=4imK7-BVxxorFs6EewSJ5Vx-TJ4I5hoEAzw3ORTR_28=" class="card-img-top rounded-2" alt="...">
+          <h3 class="my-3">Deta Scientist</h3>
+          <h6>Beginner friendly, 85 Lessons</h6>
+          <button style="width: 30%; height: 40px; border: 1px solid yellow; background-color: yellow; border-radius: 20px; margin-left: 35%; margin-bottom: 20%; margin-top: 10%;">Details</button>
+        </div>
+        <div class="card text-center mx-4 rounded-2 shadow-lg">
+          <img src="https://www.shutterstock.com/image-photo/tired-student-taking-online-classes-600nw-1966730875.jpg" height="220px" class="card-img-top rounded-2" alt="...">
+          <h3 class="my-3">Machine Learning</h3>
+          <h6>Beginner friendly, 130 Lessons</h6>
+          <button style="width: 30%; height: 40px; border: 1px solid yellow; background-color: yellow; border-radius: 20px; margin-left: 35%; margin-bottom: 20%; margin-top: 10%;">Details</button> 
+        </div>
+      </div>  
+      <div class=" bg-warning bg-gradient my-5 p-5 " style="border-radius: 200px 0px 0px 0px ;">
+        <div class="row align-items-start" >
+          <div class="col">
+            <h1 class="text-white my-3 p-3">Number Space</h1>
+            <p>Cras vel facilisis ex, at commodo dui. Cras non nisi gravida, <br> sodales lacus vel, scelerisque justo. Suspendisse vitae diam at <br> diam consectetur elementum eget at ligula.</p>
+            <div class="container">
+              <div class="row align-items-start my-5">
+                <div class="col">
+                  <img src="https://cdn3.vectorstock.com/i/1000x1000/22/57/black-laptop-icon-isolated-on-yellow-background-vector-34042257.jpg" height="70px"  class="rounded-circle" >
+                </div>
+                <div class="col text-left text-white">
+                  <h1>116<sup>+</sup></h1>
+                  <p>Free Courses</p>
+                </div>
+                <div class="col">
+                  <img src="https://cdn3.vectorstock.com/i/1000x1000/22/57/black-laptop-icon-isolated-on-yellow-background-vector-34042257.jpg" height="70px"  class="rounded-circle">
+                </div>
+                <div class="col text-left text-white">
+                  <h1>12</h1>
+                  <p>Learning Paths</p>
+                </div>
+                <div class="col">
+                  <img src="https://cdn3.vectorstock.com/i/1000x1000/22/57/black-laptop-icon-isolated-on-yellow-background-vector-34042257.jpg" height="70px"  class="rounded-circle" >
+                </div>
+                <div class="col text-left text-white">
+                  <h1>23<sup>K</sup></h1>
+                  <p>Happy Clients</p>
+                </div>
+                <div class="col">
+                  <img src="https://cdn3.vectorstock.com/i/1000x1000/22/57/black-laptop-icon-isolated-on-yellow-background-vector-34042257.jpg" height="70px"  class="rounded-circle" >
+                </div>
+                <div class="col text-left text-white ">
+                  <h1>9<sup>Y</sup></h1>
+                  <p>Exprience</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
