--- a/Amit.html
+++ b/Amit.html
@@ -1,235 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bootsrap</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Calculator</title>
 </head>
+<style>
+    * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: poppins, sans-serif;
+}
+body {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(45deg,
+    #0a0a0a, #3a4452);
+}
+.Calculator {
+    border: 1px solid #717377;
+    padding: 20px;
+    border-radius: 16px;
+    background: transparent;
+    box-shadow: 0px 3px 15px rgba(113, 115, 119, 0.5);
+}
+input {
+    width: 320px;
+    border: none;
+    padding: 24px;
+    margin: 10px;
+    background: transparent;
+    box-shadow: 0px 3px 15px rgbs(84, 84, 84, 0.1);
+    font-size: 40px;
+    text-align: right;
+    cursor: pointer;
+    color: #ffffff;
+}
 
-<body class="bg-warning-subtle">
-    <!--nav bar-->
-    <div class="container-fluid"></div>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
+input::placeholder {
+    color: #ffffff;
+}
+button {
+    border: none;
+    width: 60px;
+    height: 6px;
+    margin: 10px;
+    border-radius: 50%;
+    background: transparent;
+    color: #ffffff;
+    font-size: 20px;
+    box-shadow: -8px -8px 15px rgba(255,
+    255, 255, 0,1);
+    cursor: pointer;
+}
+.equalbtn {
+    background-color: #fb7b14;
+}
+.operator {
+    color: #6dee0a;
+}
+</style>
+<body>
+    <div class="Calculator">
+        <input type="text" placeholder="0" id="inputBox">
+        <div>
+            <button class="operator">AC</button>
+            <button class="operator">DEL</button>
+            <button class="operator">%</button>
+            <button class="operator">/</button>
         </div>
-    </nav>
-    </div>
-    <!--Alert-->
-    <div class="alert alert-danger mb-5 ms-5 me-3 pt-5 ps-3 pe-5 pb-5" role="alert">
-        A simple primary alert—check it out!
-    </div>
-    <h1>Example heading <span class="badge text-bg-info">New</span></h1>
-    <!--breadcrumb-->
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item active" aria-current="page">Home</li>
-        </ol>
-    </nav>
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Library</li>
-        </ol>
-    </nav>
-
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Library</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Data</li>
-        </ol>
-    </nav>
-    <!--botton-->
-    <button type="button" class="btn btn-danger">Danger</button>
-    <button type="button" class="btn btn-outline-danger">Danger</button>
-    <button type="button" class="btn btn-warning btn-lg">Large button</button>
-    <button type="button" class="btn btn-success btn-lg">Large button</button>
-
-    <!--cards-->
-    <div class="card ms-auto" style="width: 18rem;">
-        <img src="https://scontent.fjai2-3.fna.fbcdn.net/v/t39.30808-6/438097849_122116684478267212_4895054605611497543_n.jpg?_nc_cat=1&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=UfN12INpNesQ7kNvgGHeSzg&_nc_ht=scontent.fjai2-3.fna&oh=00_AYCh4JJEWf2WsHwVaXIkIxkLw6wTEjEgZQ2UQY3_2pMJkw&oe=669875CF"
-            class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title fw-bold text-center">This is my Card</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button class="operator">*</button>
         </div>
-    </div>
-    <!--carousal-->
-    <div id="carouselExampleFade" class="carousel slide carousel-fade">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://photos.telugurajyam.com/media/2022/12/Honey%20Rose%20pics/Honey%20Rose%20(2).webp"
-                    class="d-block w-100" alt="...">
+        <div>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button class="operator">-</button>
+            <div>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button class="operator">+</button>
             </div>
-            <div class="carousel-item">
-                <img src="https://preview.redd.it/zd1ovyv4prh91.jpg?width=640&crop=smart&auto=webp&s=dc80f9dd1ff176331335b738a8c218b9e6255f22"
-                    class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh7cGX5lmh3kQEJ2F_K5mNKUK_6bfn-JXWOGlkZT9wMbPQeey2FJpmVhajDr85vQfLLP6AesS6uXTGV6BlaJoIn-flqH0YPrftDCpDbt0XOnluMJYI6GTk9AA3JJon3zAGszXy24jh77jyc3bRJCpHMlCBm4uYrV8jm09IEm2ucTMt2evYDAU6E9ER4/s1350/honey%20rose1.jpg"
-                    class="d-block w-100" alt="...">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-
-    <!--coollapse-->
-    <p class="d-inline-flex gap-1">
-        <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
-            aria-controls="collapseExample">
-            open the page
-        </a>
-        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-            aria-expanded="false" aria-controls="collapseExample">
-            open the page 2
-        </button>
-    </p>
-    <div class="collapse" id="collapseExample">
-        <div class="card card-body">
-            Some placeholder content for the collapse component.
-        </div>
-    </div>
-
-    <!--model-->
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Launch demo modal
-    </button>
-
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
+            <div>
+                <button>00</button>
+                <button>0</button>
+                <button>.</button>
+                <button class="equalbtn">=</button>
             </div>
         </div>
     </div>
-
-    <!--grid - row and colum-->
-    <div class="container text-center">
-        <div class="row">
-            <div class="col">
-                <div class="card ms-auto" style="width: 18rem;">
-                    <img src="https://scontent.fjai2-3.fna.fbcdn.net/v/t39.30808-6/438097849_122116684478267212_4895054605611497543_n.jpg?_nc_cat=1&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=UfN12INpNesQ7kNvgGHeSzg&_nc_ht=scontent.fjai2-3.fna&oh=00_AYCh4JJEWf2WsHwVaXIkIxkLw6wTEjEgZQ2UQY3_2pMJkw&oe=669875CF"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold text-center">This is my Card</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's
-                            content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card ms-auto" style="width: 18rem;">
-                    <img src="https://scontent.fjai2-3.fna.fbcdn.net/v/t39.30808-6/438097849_122116684478267212_4895054605611497543_n.jpg?_nc_cat=1&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=UfN12INpNesQ7kNvgGHeSzg&_nc_ht=scontent.fjai2-3.fna&oh=00_AYCh4JJEWf2WsHwVaXIkIxkLw6wTEjEgZQ2UQY3_2pMJkw&oe=669875CF"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold text-center">This is my Card</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's
-                            content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid text-center">
-        <div class="row">
-            <div class="col-12 col-sm-6 col-md-4 col-lg-2 bg-warning border border-success">
-                1 of 2
-            </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-2 bg-warning border border-success">
-                2 of 2
-            </div>
-        </div>
-        <!--<div class="row">
-            <div class="col-1 bg-success border border-success">
-                1 of 3
-            </div>
-            <div class="col-2 bg-success border border-success">
-                2 of 3
-            </div>
-            <div class="col bg-success border border-success">
-                3 of 3
-            </div>
-        </div>-->
-    </div>
-
-
-
-
-
-
-
+    <script src="Amit.js"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-
 </html>
